1.2gb-content-1/kubernetes-master/staging/src/k8s.io/apiextensions-apiserver/test/integration/ratcheting_test_cases/valid/simple-gateway/gateway.yaml
#$ Used in:
#$ - site-src/guides/traffic-splitting.md
#$ - site-src/guides/simple-gateway.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: prod-web
spec:
  gatewayClassName: acme-lb
  listeners:
  - protocol: HTTP
    port: 80
    name: prod-web-gw
    allowedRoutes:
      namespaces:
        from: Same
# ID-1768294477-e7cfe774
